# AI-Sponsership_Platform

./: .gitignore  .replit  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  SPONSOR_MATCHING_DESIGN.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260407_0001_init.py  20260407_0002_ivfflat_sponsors_embedding.py
backend/app/: config.py  database.py  email_agent.py  embeddings.py  event_strategy_agent.py  main.py  models.py  profile_agent.py  schemas.py
backend/app/data/: sponsors_seed.py
backend/app/services/: __init__.py  embedding_service.py  sponsor_ingestion_service.py  sponsor_match_service.py  web_sponsor_discovery_service.py
backend/scripts/: ingest_sponsors_csv.py  seed_sponsors.py
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: trace
frontend/.next/cache/: config.json
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  class-variance-authority.js  clsx.js  framer-motion.js  next.js  (+4 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/wizard/: page.tsx
frontend/components/brand/: SponsorMatchMark.tsx
frontend/components/landing/: SponsorshipLanding.tsx
frontend/components/ui/: button.tsx  card.tsx  textarea.tsx
frontend/components/wizard/: SponsorshipWizard.tsx
frontend/lib/: api.ts
shared/: types.ts
(+13 files in other folders)
