[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "openai==1.51.2",
    "pgvector==0.3.4",
    "psycopg[binary]==3.2.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]
